--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/darthCodius/devTinder#readme",
   "dependencies": {
     "express": "^5.2.1",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.2.1",
     "nodemon": "^3.1.11"
   }
 }
